# cooperative_turtlebots

./: README.md  turtlebot_vel.xml  turtlebots.xml
decentralized_ekf_ros/: README.md
decentralized_ekf_ros/dekf_fakegps/: CMakeLists.txt  package.xml
decentralized_ekf_ros/dekf_fakegps/config/: gps_tb3_0.yaml  gps_tb3_1.yaml  gps_tb3_2.yaml
decentralized_ekf_ros/dekf_fakegps/launch/: gps_node.launch
decentralized_ekf_ros/dekf_fakegps/src/: gps_node.cpp
decentralized_ekf_ros/dekf_sensor_fusion/: CMakeLists.txt  backup.txt  backup2.txt  package.xml
decentralized_ekf_ros/dekf_sensor_fusion/include/dekf_sensor_fusion/: dekf_sensor_fusion.h
decentralized_ekf_ros/dekf_sensor_fusion/launch/: dekf.launch  dekf_debug.launch  drone1.launch  drone2.launch  master.launch  tb3_0.launch  tb3_1.launch  tb3_2.launch
decentralized_ekf_ros/dekf_sensor_fusion/msg/: globalCovariance.msg
decentralized_ekf_ros/dekf_sensor_fusion/src/: dekf_sensor_fusion.cpp
decentralized_ekf_ros/dekf_sensor_fusion/srv/: SrvCov.srv
decentralized_ekf_ros/dekf_truth/: CMakeLists.txt  package.xml
decentralized_ekf_ros/dekf_truth/config/: truth_tb3_0.yaml  truth_tb3_1.yaml  truth_tb3_2.yaml
decentralized_ekf_ros/dekf_truth/launch/: truth_node.launch
decentralized_ekf_ros/dekf_truth/src/: truth_node.cpp
decentralized_ekf_ros/dekf_truth/srv/: d_to_d.srv
decentralized_ekf_ros/driving_turtlebots/: CMakeLists.txt  package.xml
decentralized_ekf_ros/driving_turtlebots/config/: line_tb3_0.yaml  line_tb3_1.yaml
decentralized_ekf_ros/driving_turtlebots/launch/: line.launch  line_tb3_0.launch  line_tb3_1.launch  (+18 more)
turtlebot3/turtlebot3_odometry/: CMakeLists.txt  package.xml
turtlebot3/turtlebot3_odometry/launch/: odometry.launch
turtlebot3/turtlebot3_odometry/scripts/: relative_odometry.py
turtlebot3/turtlebot3_odometry/src/: odometries_node.cpp
(+22 files in other folders)
